# gitfox

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  gitfox.toml.example
.cargo/: config.toml
.gitfox/ci/: build.yml  config.yml
.github/: copilot-instructions.md
docs/: ci-auto-trigger.md  ci-implementation-summary.md  gitfox-ci-config.md  migration-guide.md  oauth2-provider.md  runner-config-sync.md  ssh-server.md  sshd-integration.md  token-authentication.md  vscode-additionalBuiltinExtensions-analysis.md  vscode-additionalBuiltinExtensions.md  vscode-extension-troubleshooting.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  monaco-editor.d.ts  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/components/: CiStatusIcon.vue  ConfirmDialog.vue  JobLogViewer.vue  ToastNotification.vue
frontend/src/navigation/: icons.ts  index.ts  types.ts  useNavigation.ts
gitfox-omnibus/: .gitignore  Cargo.toml  README.md  gitfox.toml.example
gitfox-omnibus/patches/: pcre2-sljit-mirror.patch
gitfox-omnibus/src/: build.rs  deps.rs  main.rs  stub.rs
gitfox-omnibus/stub/: Cargo.toml.template  build.rs.template
gitfox-omnibus/stub/embedded/templates/: gitfox.toml.template  nginx-https-server.template  nginx.conf.template  postgresql.conf.template  redis.conf.template
gitfox-omnibus/stub/src/: main.rs  mime.types.default  services.rs  unified_config.rs
gitfox-runner/: Cargo.toml  README.md  REGISTRATION.md  config.example.toml
gitfox-runner/src/: config.rs  error.rs  executor.rs  main.rs  messages.rs  runner.rs
gitfox-runner/src/executor/: docker.rs  kubernetes.rs  mod.rs  shell.rs
gitfox-runner/src/security/: freebsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
gitfox-shell/: .env.example  Cargo.toml  README.md  build.rs  config.example.env
gitfox-shell/hooks/: post-receive  pre-receive  update
gitfox-shell/src/: api.rs  auth_client.rs  authorized_keys_check.rs  command.rs  config.rs  error.rs  git.rs  gitlayer_client.rs  main.rs  ssh_server.rs
gitfox-workhorse/: .gitignore  Cargo.toml  IMPLEMENTATION.md  PROJECT_CHECKLIST.md  QUICKSTART.md  README.md  build.rs  config.example.toml  start.sh
gitfox-workhorse/src/: auth_client.rs  config.rs  git_http.rs  gitlayer_client.rs  http_client.rs  main.rs  proxy.rs  registry_client.rs  static_files.rs
gitfox-workhorse/src/lfs/: client.rs  handlers.rs  mod.rs  storage.rs  types.rs
gitfox-workhorse/src/registry/: auth.rs  cargo.rs  config.rs  docker.rs  mod.rs  npm.rs  storage.rs  types.rs
gitlayer/: .env.example  Cargo.toml  README.md  build.rs  env.example
gitlayer/benches/: smarthttp_bench.rs
gitlayer/proto/: auth.proto  blob.proto  commit.proto  diff.proto  gpg.proto  health.proto  lfs.proto  operations.proto  ref.proto  repository.proto  smarthttp.proto  tree.proto
gitlayer/src/: config.rs  error.rs  lib.rs  main.rs
gitlayer/src/git/: blob.rs  commit.rs  diff.rs  mod.rs  operations.rs  refs.rs  repository.rs  tree.rs
gitlayer/src/services/: blob.rs  commit.rs  diff.rs  gpg.rs  health.rs  mod.rs  operations.rs  refs.rs  repository.rs  smarthttp.rs  tree.rs
migrations/: 20240101000000_initial.sql  20240102000000_add_namespaces.sql  20240126000000_fix_ids_and_remove_slug.sql  20240127000000_remove_default_branch.sql  20240128000000_add_ssh_keys.sql  20240129000000_add_issues.sql  20240130000000_fix_namespaces_to_bigint.sql  20240131000000_add_stars_forks.sql  20240201000000_add_system_configs.sql  20240202000000_add_pat_and_oauth.sql  20240203000000_add_smtp_settings.sql  20240204000000_add_two_factor_auth.sql  20240205000000_add_require_two_factor_config.sql  20240206000000_add_two_factor_required_at.sql  20240207000000_add_user_status_fields.sql  20240208000000_add_ci_runner_tables.sql  20240209000000_add_runner_scope.sql  20240209000001_add_pipeline_error_message.sql  20240210000000_add_jobs_error_message.sql  20240211000000_add_cicd_system_configs.sql  20240212000000_add_job_timeout_fields.sql  20240213000000_add_mr_source_project.sql  20240214000000_add_pg_timeout_trigger.sql  20240215000000_fix_timeout_trigger_timing.sql  20260222225615_add_user_pro_field.sql  20260222230231_add_runner_usage_tracking.sql  20260222231000_add_webide_configs.sql  20260223000000_add_oauth_trusted_flags.sql  20260301000000_fix_subgroup_paths.sql  20260303000000_add_lfs_tables.sql  20260304000000_add_package_registry.sql  20260306000000_add_gpg_keys.sql  20260306100000_add_system_gpg_key.sql  20260306200000_add_project_settings.sql  20260306300000_add_project_settings_tables.sql  20260306390000_add_cargo_package_type.sql  20260306400000_add_cargo_registry.sql  20260307000000_add_ssh_host_key_config.sql  20260308000000_fix_package_files_sha_length.sql  20260309000000_add_registry_shadow_projects.sql
src/: config.rs  db.rs  error.rs  main.rs  queue.rs
src/grpc/: auth_service.rs  lfs_service.rs  mod.rs
src/handlers/: admin.rs  auth.rs  branch.rs  commit.rs  git_http.rs  gpg_key.rs  internal.rs  issue.rs  job_log_ws.rs  merge_request.rs  mod.rs  namespace.rs  oauth.rs  personal_access_token.rs  pipeline.rs  project.rs  project_settings.rs  registry.rs  repository.rs  runner.rs  search.rs  ssh_key.rs  tag.rs  two_factor.rs  user.rs  webhook.rs
src/middleware/: auth.rs  rate_limit.rs
src/models/: branch.rs  commit.rs  gpg_key.rs  issue.rs  lfs.rs  merge_request.rs  mod.rs  namespace.rs  oauth.rs  package.rs  personal_access_token.rs  pipeline.rs  project.rs  project_settings.rs  repository.rs  runner_usage.rs  scope.rs  ssh_key.rs  tag.rs  two_factor.rs  user.rs  webhook.rs
src/services/: ci.rs  ci_config.rs  git.rs  git_new.rs  gitlayer.rs  gpg_key.rs  mod.rs  oauth.rs  project.rs  runner_usage.rs  smtp.rs  ssh_host_key.rs  system_config.rs  two_factor.rs  user.rs
src/ssh/: handler.rs  keys.rs  mod.rs  session.rs
webide/: .env.development  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webide/scripts/: postinstall.js
webide/src/: App.vue  main.ts  vite-env.d.ts
(+145 files in other folders)
