[package]
name = "devops"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.6"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
deadpool-redis = "0.14"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Git Operations
git2 = "0.18"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# SSH Server
russh = "0.45"
russh-keys = "0.45"
ring = "0.17"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"

# Validation
validator = { version = "0.16", features = ["derive"] }
slug = "0.1.6"
base64 = "0.22.1"
