[package]
name = "devops"
version = "1.0.1"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
actix-files = "0.6"
actix-multipart = "0.6"
actix-web-actors = "4.3"
actix = "0.13"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
deadpool-redis = "0.14"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "1"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
hostname = "0.3"
mime_guess = "2"

# Validation
validator = { version = "0.16", features = ["derive"] }
slug = "0.1.6"
base64 = "0.22.1"
regex = "1"

# Two-Factor Authentication
totp-lite = "2"
qrcode = "0.14"
base32 = "0.4"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# OpenSSL vendored (for musl static linking)
openssl-sys = { version = "0.9", features = ["vendored"] }

# Crypto & Random
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
urlencoding = "2"
aes-gcm = "0.10"
lazy_static = "1.5"

# HTTP Client (for OAuth)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }

# gRPC (用于内部服务间通信)
tonic = "0.12"
prost = "0.13"
tempfile = "3.26.0"

[build-dependencies]
tonic-build = "0.12"
