[package]
name = "gitfox-omnibus"
version = "1.0.0"
edition = "2021"
description = "GitFox Omnibus - Packaging tool to create self-contained GitFox binary"
authors = ["GitFox Team"]

[[bin]]
name = "gitfox-omnibus"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async Runtime
tokio = { version = "1", features = ["full", "process"] }

# HTTP Client
reqwest = { version = "0.12", features = ["blocking"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# File utilities
walkdir = "2"
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"

# Git operations
git2 = "0.18"

# Progress bar
indicatif = "0.17"

# Process execution
which = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
