[package]
name = "gitfox-shell"
version = "1.0.0"
edition = "2021"
description = "GitFox Shell - SSH access and repository management for GitFox"
authors = ["GitFox Team"]

[[bin]]
name = "gitfox-shell"
path = "src/main.rs"

[[bin]]
name = "gitfox-shell-authorized-keys-check"
path = "src/authorized_keys_check.rs"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Utilities
regex = "1"
once_cell = "1"
home = "0.5"

# Process management
nix = { version = "0.27", features = ["process", "signal"] }

# SSH Server (内置 SSH 服务器，类似 gitlab-shell)
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"

# gRPC client for GitLayer
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
async-stream = "0.3"

[build-dependencies]
tonic-build = "0.12"
