[package]
name = "gitfox-workhorse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitfox-workhorse"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
actix-cors = "0.7"
futures = "0.3"
bytes = "1"
once_cell = "1.19"
anyhow = "1.0"
num_cpus = "1.16"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
hyperlocal = "0.9"
http-body-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
