[package]
name = "gitlayer"
version = "0.1.0"
edition = "2021"
description = "Git operations service via gRPC (similar to Gitaly)"
authors = ["GitFox Team"]

[[bin]]
name = "gitlayer"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full", "sync"] }
tokio-stream = "0.1"
async-stream = "0.3"

# Git
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
walkdir = "2.4"
glob = "0.3"
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "smarthttp_bench"
harness = false

[lib]
name = "gitlayer"
path = "src/lib.rs"

[features]
default = []
